--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -26,7 +27,7 @@
                                  <children>
                                             <TableView fx:id="baseDataUserTable" maxWidth="400.0" minWidth="400.0" prefHeight="206.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 </TableView>
-                                    <Button fx:id="updateData" layoutX="412.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateData" text="Update Data in DB" AnchorPane.leftAnchor="415.0" AnchorPane.topAnchor="15.0" />
+                                    <Button layoutX="412.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateUserName" text="Update Data in DB" AnchorPane.leftAnchor="415.0" AnchorPane.topAnchor="15.0" />
                                  </children>
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="131.0" prefWidth="598.0">
@@ -49,13 +50,13 @@
                                           <Label text="Register New User:" />
                                           <Label text="Created User" GridPane.rowIndex="1" />
                                           <Label text="Name" GridPane.rowIndex="2" />
-                                          <Label text="Admint 1/0" GridPane.rowIndex="4" />
+                                          <Label text="Admin 1/0" GridPane.rowIndex="4" />
                                           <Label text="Password" GridPane.rowIndex="3" />
-                                          <TextField fx:id="fieldCreatedUser" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <TextField fx:id="fieldName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <TextField fx:id="fieldUserName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                           <TextField fx:id="fieldPassword" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                          <TextField fx:id="fieldIsadmin" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                                          <Button fx:id="submit" mnemonicParsing="false" onAction="#submit" text="Submit" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                                          <Button fx:id="buttonSubmitNewUser" mnemonicParsing="false" onAction="#submitNewUser" text="Submit" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                                          <ComboBox fx:id="comboBoxCreatedUserUser" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <ComboBox fx:id="comboBoxIsadmin" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                        </children>
                                     </GridPane>
                                  </children>
@@ -66,8 +67,104 @@
                         </AnchorPane>
                     </content>
                 </Tab>
-                <Tab text="Sites" />
-                <Tab text="Buslines" />
+            <Tab text="Sites">
+               <content>
+                  <AnchorPane>
+                     <children>
+                        <SplitPane dividerPositions="0.4162132752992383" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <items>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                                 <children>
+                                    <TableView fx:id="baseDataSiteTable" maxWidth="400.0" minWidth="400.0" prefHeight="206.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    <Button layoutX="412.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateSite" text="Update Data in DB" AnchorPane.leftAnchor="415.0" AnchorPane.topAnchor="15.0" />
+                                 </children>
+                              </AnchorPane>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="131.0" prefWidth="598.0">
+                                 <children>
+                                    <GridPane layoutX="5.0" layoutY="14.0" AnchorPane.bottomAnchor="-14.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="14.0">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <Label text="Register New Site:" />
+                                          <Label text="Created User" GridPane.rowIndex="1" />
+                                          <Label text="Name" GridPane.rowIndex="2" />
+                                          <Label text="City" GridPane.rowIndex="5" />
+                                          <Label text="Street" GridPane.rowIndex="3" />
+                                          <TextField fx:id="fieldSiteName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <TextField fx:id="fieldStreetName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                          <TextField fx:id="fieldCity" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                          <Button fx:id="buttonSubmitNewSite" mnemonicParsing="false" onAction="#submitNewSite" text="Submit" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                                          <Label text="Zip Code" GridPane.rowIndex="4" />
+                                          <TextField fx:id="fieldZipCode" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                          <ComboBox fx:id="ComboBoxCreatedUserSite" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </AnchorPane>
+                           </items>
+                        </SplitPane>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+            <Tab text="Buslines">
+               <content>
+                  <AnchorPane>
+                     <children>
+                        <SplitPane dividerPositions="0.5875952121871599" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <items>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                                 <children>
+                                    <TableView fx:id="baseDataBuslineTable" maxWidth="400.0" minWidth="400.0" prefHeight="206.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    <Button layoutX="412.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateBusline" text="Update Data in DB" AnchorPane.leftAnchor="415.0" AnchorPane.topAnchor="15.0" />
+                                 </children>
+                              </AnchorPane>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="131.0" prefWidth="598.0">
+                                 <children>
+                                    <GridPane layoutX="5.0" layoutY="14.0" AnchorPane.bottomAnchor="-14.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="14.0">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <Label text="Register New Busline:" />
+                                          <Label text="Created User" GridPane.rowIndex="1" />
+                                          <Label text="Busline Name" GridPane.rowIndex="2" />
+                                          <Label text="Bustype" GridPane.rowIndex="3" />
+                                          <TextField fx:id="fieldBuslineName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <TextField fx:id="fieldBusType" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                          <Button mnemonicParsing="false" onAction="#submitNewBusline" text="Submit" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                                          <ComboBox fx:id="comboBoxCreatedUserBusline" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                       </children>
+                                    </GridPane>
+                                 </children>
+                              </AnchorPane>
+                           </items>
+                        </SplitPane>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
             </tabs>
         </TabPane>
     </children>
