--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/MainApp.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="MainApp" stylesheets="/css/main.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.MainAppUIController">
+<AnchorPane id="MainApp" stylesheets="/css/main2.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.MainAppUIController">
    <children>
       <VBox id="main_menu_pane" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -42,10 +42,10 @@
             </ToggleButton>
          </children>
       </VBox>
-      <SplitPane dividerPositions="0.1" layoutX="200.0" layoutY="50.0" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <SplitPane dividerPositions="0.1" layoutX="200.0" layoutY="50.0" orientation="VERTICAL" styleClass="splite-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <items>
-            <TextArea id="messageBox" fx:id="messageBox" promptText="Messages" wrapText="true" />
-            <AnchorPane id="content_pane" fx:id="contentPane" minHeight="200.0" minWidth="200.0" />
+            <TextArea id="messageBox" fx:id="messageBox" promptText="Messages" styleClass="split-pane" wrapText="true" />
+            <AnchorPane fx:id="contentPane" minHeight="200.0" minWidth="200.0" />
          </items>
       </SplitPane>
    </children>
