Equals Methoden angepasst

--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
@@ -27,7 +27,7 @@
                                  <children>
                                             <TableView fx:id="baseDataUserTable" maxWidth="400.0" minWidth="400.0" prefHeight="206.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 </TableView>
-                                    <Button layoutX="412.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateUserName" text="Update Data in DB" AnchorPane.leftAnchor="415.0" AnchorPane.topAnchor="15.0" />
+                                    <Button layoutX="412.0" layoutY="14.0" mnemonicParsing="false" onAction="#updateUser" text="Update Data in DB" AnchorPane.leftAnchor="415.0" AnchorPane.topAnchor="15.0" />
                                  </children>
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="131.0" prefWidth="598.0">
