--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportInspectionDialog.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportInspectionDialog.fxml
@@ -4,12 +4,12 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportInspectionDialogUIController">
-    <children>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportInspectionDialogUIController">
+
       <VBox AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="20.0">
-         <children>
+
             <HBox fx:id="resultPanelContainer" prefHeight="400.0" prefWidth="600.0" spacing="10.0" />
-         </children>
+
       </VBox>
-    </children>
+
 </AnchorPane>
