--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportResultPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportResultPanel.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportResultPanelUIController">
-   <children>
+<AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportResultPanelUIController">
+
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
+
             <TableView fx:id="resultTable" VBox.vgrow="ALWAYS" />
             <ButtonBar prefHeight="40.0">
               <buttons>
-                <Button fx:id="exportButton" mnemonicParsing="false" onAction="#exportResultTable" text="Export" />
+                <Button fx:id="exportButton" mnemonicParsing="false" onAction="#exportResultTable" text="Export" styleClass="button" />
               </buttons>
                <padding>
                   <Insets right="10.0" />
@@ -23,7 +23,7 @@
                   <Insets bottom="10.0" top="10.0" />
                </VBox.margin>
             </ButtonBar>
-         </children>
+
       </VBox>
-   </children>
+
 </AnchorPane>
