--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/SettingsPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/SettingsPanel.fxml
@@ -15,14 +15,14 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="SettingsPanel" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.SettingsPanelUIController">
-   <children>
+<AnchorPane id="SettingsPanel" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.SettingsPanelUIController">
+
       <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <tabs>
+
           <Tab text="DB">
-            <content>
+
               <AnchorPane>
-                     <children>
+
                         <GridPane layoutX="15.0" layoutY="26.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" prefWidth="120.0" />
@@ -38,32 +38,32 @@
                               <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
-                           <children>
-                              <Label text="JDBC URL" />
-                              <Label text="Password" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+
+                              <Label text="JDBC URL" styleClass="label"/>
+                              <Label text="Password" GridPane.columnIndex="4" GridPane.rowIndex="1" styleClass="label"/>
                               <TextArea fx:id="dbJDBC" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.hgrow="ALWAYS">
                                  <GridPane.margin>
                                     <Insets bottom="10.0" top="10.0" />
                                  </GridPane.margin></TextArea>
                               <TextField fx:id="dbPassword" GridPane.columnIndex="5" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
                               <TextField fx:id="dbUsername" onAction="#applyDBSettingChanges" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-                              <Label text="User" GridPane.rowIndex="1" />
+                              <Label text="User" GridPane.rowIndex="1" styleClass="label"/>
                               <ButtonBar GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.rowIndex="2">
                                 <buttons>
                                   <Button fx:id="dbTestConnectionButton" mnemonicParsing="false" onAction="#testDbConnection" text="Test Connection" />
-                                    <Button fx:id="dbApplyChangesButton" mnemonicParsing="false" onAction="#applyDBSettingChanges" text="Apply" />
+                                    <Button fx:id="dbApplyChangesButton" mnemonicParsing="false" onAction="#applyDBSettingChanges" text="Apply" styleClass="button"/>
                                 </buttons>
                               </ButtonBar>
-                           </children>
+
                         </GridPane>
-                     </children>
+
                   </AnchorPane>
-            </content>
+
           </Tab>
           <Tab text="App">
-            <content>
+
               <AnchorPane>
-                     <children>
+
                         <GridPane layoutY="14.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.79998779296875" minWidth="10.0" prefWidth="203.99998779296874" />
@@ -74,17 +74,17 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
-                           <children>
+
                               <CheckBox fx:id="clearMessageBoxOnPanelChangeCb" mnemonicParsing="false" GridPane.columnIndex="1" />
-                              <Label text="Clear message box on panel change" />
-                              <Label text="Selected panel on app startup" GridPane.rowIndex="1" />
+                              <Label text="Clear message box on panel change" styleClass="label"/>
+                              <Label text="Selected panel on app startup" GridPane.rowIndex="1" styleClass="label"/>
                               <ComboBox fx:id="availablePanelComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                           </children>
+
                         </GridPane>
-                     </children></AnchorPane>
-            </content>
+                     </AnchorPane>
+
           </Tab>
-        </tabs>
+
       </TabPane>
-   </children>
+
 </AnchorPane>
